Add Delphi 13 compile results to each category
Each snippet's meta data in each category specific .ini file was updated
with a new "Delphi13F" key with the result of compiling the snippet as
the key's value.

Fixes #60

--- a/collection/arrays.ini
+++ b/collection/arrays.ini
@@ -30,6 +30,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ByteArraysEqual]
@@ -56,6 +57,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ByteArraysSameStart]
@@ -82,6 +84,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IndexOfByte]
@@ -108,6 +111,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [LastIndexOfByte]
@@ -134,6 +138,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [StringListToArray]
@@ -161,6 +166,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [AppendByteArray]
@@ -188,6 +194,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ChopByteArray]
@@ -215,6 +222,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CloneByteArray]
@@ -243,6 +251,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ConcatByteArrays]
@@ -270,6 +279,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PopByteArray]
@@ -297,6 +307,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PushByteArray]
@@ -324,6 +335,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ShiftByteArray]
@@ -351,6 +363,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SliceByteArray]
@@ -378,6 +391,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [UnShiftByteArray]
@@ -405,6 +419,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TArrayUtils]
@@ -427,6 +442,7 @@ Delphi2006Win32=N
 Delphi2007=N
 DelphiXE=Y
 Delphi12A=Y
+Delphi13F=Y
 
 [ReverseByteArray]
 Kind=routine
@@ -439,3 +455,4 @@ AdvancedTest.URL="https://github.com/delphidabbler/code-snippets/tree/master/tes
 Snip=656.dat
 DelphiXE=Y
 Delphi12A=Y
+Delphi13F=Y
