--- a/collection/registry.ini
+++ b/collection/registry.ini
@@ -29,6 +29,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegKeyList]
@@ -54,6 +55,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegValueList]
@@ -79,6 +81,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegDeleteValue]
@@ -105,6 +108,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegParsePath]
@@ -129,6 +133,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegReadString]
@@ -155,6 +160,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegValueExists]
@@ -181,6 +187,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RegWriteString]
@@ -207,4 +214,5 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
