--- a/collection/sys.ini
+++ b/collection/sys.ini
@@ -27,6 +27,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Delay]
@@ -52,6 +53,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [EmptyKeyQueue]
@@ -77,6 +79,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetBiosVendor]
@@ -102,6 +105,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetCharFromVirtualKey]
@@ -126,6 +130,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetParentProcessID]
@@ -150,6 +155,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetProcessName]
@@ -174,6 +180,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetProcessorIdentifier]
@@ -199,6 +206,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetProcessorName]
@@ -224,6 +232,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetSystemManufacturer]
@@ -249,6 +258,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetSystemProductName]
@@ -274,6 +284,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetWindowProcessID]
@@ -298,6 +309,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetWindowProcessName]
@@ -323,6 +335,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetWindowThreadID]
@@ -347,6 +360,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [HostIPAddress]
@@ -371,6 +385,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsAdmin]
@@ -395,6 +410,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsKeyPressed]
@@ -419,6 +435,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsLockKeyOn]
@@ -443,6 +460,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsRunningOnBattery]
@@ -468,6 +486,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Pause]
@@ -494,6 +513,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProgramFileName]
@@ -519,6 +539,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProgramFileSpec]
@@ -543,6 +564,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProgramName]
@@ -567,6 +589,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProgramPath]
@@ -593,6 +616,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RemainingBatteryPercent]
@@ -618,7 +642,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
-Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SendKeysToWindow]
@@ -644,6 +668,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SetLockKeyState]
@@ -669,6 +694,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CurrentMemoryUsage]
@@ -694,6 +720,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [DeleteEnvVar]
@@ -714,6 +741,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DOSCommand]
@@ -735,6 +763,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DOSCommandRedirect_A]
@@ -756,6 +785,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DOSCommandRedirect_B]
@@ -777,6 +807,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetAllEnvVars]
@@ -798,6 +829,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetAvailablePhysMemory]
@@ -818,6 +850,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetDefaultPrinterName]
@@ -841,6 +874,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetEnvironmentBlockSize]
@@ -861,6 +895,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetEnvVar]
@@ -880,6 +915,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetErrorMessageWithId]
@@ -900,6 +936,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetMacAddress]
@@ -924,6 +961,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetPercentMemoryUsed]
@@ -944,6 +982,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [GetTotalPhysMemory]
@@ -964,6 +1003,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [IsAppResponding]
@@ -989,6 +1029,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [IsLibraryInstalled]
@@ -1013,6 +1054,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PostKeyEx32]
@@ -1038,6 +1080,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProcessMessages]
@@ -1062,6 +1105,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RefreshEnvironment]
@@ -1087,6 +1131,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SetEnvVar]
@@ -1107,6 +1152,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SetEnvVarValue]
@@ -1128,6 +1174,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SysUserErrorMessage]
@@ -1148,6 +1195,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TerminateProcessByID]
@@ -1167,6 +1215,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TrimAppMemorySize]
@@ -1192,4 +1241,5 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
