--- a/collection/types.ini
+++ b/collection/types.ini
@@ -27,6 +27,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TBytes]
@@ -52,6 +53,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TCharSet]
@@ -77,4 +79,5 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
