--- a/collection/utils.ini
+++ b/collection/utils.ini
@@ -26,6 +26,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [BytesToGBStr]
@@ -50,6 +51,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [BytesToKB]
@@ -73,6 +75,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [BytesToKBStr]
@@ -97,6 +100,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [BytesToMB]
@@ -120,6 +124,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [BytesToMBStr]
@@ -144,6 +149,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Clamp]
@@ -166,6 +172,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CompilerVer]
@@ -189,6 +196,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [EndianSwap]
@@ -212,6 +220,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ExchangeInt]
@@ -234,6 +243,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FloatToFixed]
@@ -258,6 +268,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Int64ToFixed]
@@ -282,6 +293,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToFixed]
@@ -306,6 +318,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToNumberText]
@@ -331,6 +344,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToOctal]
@@ -354,6 +368,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToRoman]
@@ -378,6 +393,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsSubClassOf]
@@ -401,6 +417,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Percentage]
@@ -425,6 +442,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PercentageStr]
@@ -451,6 +469,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ReadBigEndianWord]
@@ -474,6 +493,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TryStrToByte]
@@ -499,6 +519,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TryStrToLongWord]
@@ -523,6 +544,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TryStrToWord]
@@ -547,6 +569,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CheckBDEInstalled]
@@ -576,6 +599,7 @@ Delphi103R=N
 Delphi104S=N
 Delphi11A=N
 Delphi12A=N
+Delphi13F=N
 FPC=N
 
 [EnglishColorName]
@@ -600,6 +624,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [Exchange_Byte]
@@ -624,6 +649,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Int64]
@@ -648,6 +674,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Longint]
@@ -672,6 +699,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Longword]
@@ -696,6 +724,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Shortint]
@@ -720,6 +749,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Smallint]
@@ -744,6 +774,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_UInt64]
@@ -768,6 +799,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Exchange_Word]
@@ -792,6 +824,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FloatToNumberText]
@@ -827,6 +860,7 @@ Delphi103R=N
 Delphi104S=N
 Delphi11A=N
 Delphi12A=N
+Delphi13F=N
 FPC=Y
 
 [FloatToNumberTextXE]
@@ -853,6 +887,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FormInstanceCount_A]
@@ -879,6 +914,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [FormInstanceCount_B]
@@ -905,6 +941,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [FractionToStr]
@@ -930,6 +967,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FractionToStrEx]
@@ -956,6 +994,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FreeStringsObjects]
@@ -980,6 +1019,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToBinary_Int32]
@@ -1000,6 +1040,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IntToBinary_Int64]
@@ -1021,6 +1062,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsCharInSet]
@@ -1046,6 +1088,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsFlagSet]
@@ -1069,6 +1112,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ProgIDInstalled]
@@ -1093,6 +1137,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [VariantIsObject]
@@ -1112,4 +1157,5 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
