--- a/collection/file.ini
+++ b/collection/file.ini
@@ -27,6 +27,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CopyFiles]
@@ -53,6 +54,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CreateURLShortcut]
@@ -76,6 +78,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DefaultFileExt]
@@ -100,6 +103,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DeleteFiles]
@@ -125,6 +129,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DeleteFilesWithUndo]
@@ -151,6 +156,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DeleteFileWithUndo]
@@ -175,6 +181,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DirToPath]
@@ -198,6 +205,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DOSToUnixPath]
@@ -221,6 +229,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [EnsureFolders]
@@ -246,6 +255,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FileSizeString]
@@ -271,6 +281,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ForceFileExt]
@@ -295,6 +306,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetFileDate]
@@ -319,6 +331,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetFixedFileVerInfo]
@@ -343,6 +356,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetLastDirectory]
@@ -368,6 +382,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [HasFileExt]
@@ -392,6 +407,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [HasVerInfo]
@@ -416,6 +432,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsArchiveFile]
@@ -441,6 +458,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsFile]
@@ -466,6 +484,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsHiddenFile]
@@ -491,6 +510,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsReadOnlyFile]
@@ -516,6 +536,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsSystemFile]
@@ -541,6 +562,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsURLShortcut]
@@ -565,6 +587,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsValidFileName]
@@ -590,6 +613,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ListFiles]
@@ -615,6 +639,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [LongToShortFilePath]
@@ -639,6 +664,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PathIsRoot]
@@ -664,6 +690,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [PathToDir]
@@ -687,6 +714,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [RemoveFileExt]
@@ -711,6 +739,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SetFileDate]
@@ -735,6 +764,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SizeOfFile64]
@@ -760,6 +790,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [Touch]
@@ -783,6 +814,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [URLFromShortcut]
@@ -808,6 +840,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [CountFiles]
@@ -833,6 +866,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [DirPurge]
@@ -856,6 +890,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ExeType]
@@ -882,6 +917,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [FileInProgramDir]
@@ -906,6 +942,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [GetParentDirectory]
@@ -931,6 +968,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsDirectory]
@@ -957,6 +995,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsFolderEmpty]
@@ -983,6 +1022,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [IsHugeFile]
@@ -1008,6 +1048,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [IsReservedDeviceName]
@@ -1032,6 +1073,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [ShortToLongFilePath]
@@ -1057,6 +1099,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SizeOfFile]
@@ -1082,6 +1125,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SizeOfFile2]
@@ -1107,6 +1151,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [SubDirectoryCount]
@@ -1131,6 +1176,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=N
 
 [TempFileName]
@@ -1156,6 +1202,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TempFileNameEx]
@@ -1181,6 +1228,7 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
 
 [TExeType]
@@ -1206,4 +1254,5 @@ DelphiXE3=Y
 DelphiXE4=Y
 Delphi10S=Y
 Delphi12A=Y
+Delphi13F=Y
 FPC=Y
